fixed sidevar jumps after realoading

--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -128,10 +128,16 @@ ul {
 	list-style: none;
 }
 
-.wrapper {
+.main-loader {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: var(--secondaryFull);
 	display: flex;
-	padding: 9px 20px;
-	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
 
 .react-time-picker__wrapper {
